--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <li class="nav-item">
               <a class="nav-link" href="task2.html">Task2</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="task3.html">Task3</a>
+            </li>
           </ul>
         </div>
 
