--- a/task3.html
+++ b/task3.html
@@ -6,7 +6,7 @@
     <title>Functions and Control Flow</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/index.css">
-    <script type="text/javascript" src="/js/names1.js"></script>
+    <script type="text/javascript" src="/js/names2.js"></script>
   </head>
 
   <body class="bg-light">
@@ -29,10 +29,10 @@
               <a class="nav-link" href="task1.html">Task1</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="task2.html">Task2</a>
+              <a class="nav-link" href="task2.html">Task2</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="task3.html">Task3</a>
+              <a class="nav-link active" aria-current="page" href="task3.html">Task3</a>
             </li>
           </ul>
         </div>
@@ -57,10 +57,9 @@
 
         <div class="row justify-content-center pt-3">
             <div class="col-sm-10">
-              <h1>Task 2</h1>
-                <p class="lead">Write a simple program to combine a first name and last 
-                  name inside a function. Then update the function to accept a first
-                  and last name as arguments.</p>
+              <h1>Task 3</h1>
+                <p class="lead">Add a <strong>return</strong> statement to your <em>name</em>
+                function. Use that function to set the value of a variable.</p>
 
 <!-- start -->
 <div class="row">
@@ -77,7 +76,7 @@
       <div class="invalid-feedback">Please enter your Surname</div>
     </div>
     <div class="d-grid">
-      <button class="btn btn-secondary text-warning" type="submit" onclick="buildFullName()">Submit</button>
+      <button class="btn btn-secondary text-warning" type="submit" onclick="getName()">Submit</button>
     </div>
   </form>
   <script>
@@ -112,15 +111,20 @@
 
                 <div class="bg-white mt-5">
                   <pre>
-function buildFullName() {
+function buildName(firstName, lastName) {
+  return `${firstName} ${lastName}`;
+}
+
+
+function getName() {
   var firstName = document.getElementById('firstName').value;
   var lastName = document.getElementById('surname').value;
-  // Just return if either are blank. There will be a validation message
   if (firstName == "" || lastName == "") {
       return;
   }
 
-  document.getElementById('fullName').innerHTML = `${firstName} ${lastName}`;
+  fullName = buildName(firstName, lastName);
+  document.getElementById('fullName').innerHTML = fullName;
 }</pre>
                 </div>
                 <p id="fullName" class="bg-white"></p>
