added parms to name function, and other small tweaks

--- a/task2.html
+++ b/task2.html
@@ -110,8 +110,12 @@
 </div>
 <!-- end -->
 
-                <div class="bg-white mt-5">
-                  <pre>
+<div class="bg-white mt-5">
+<pre>
+function setName(firstName, lastName) {
+  document.getElementById('fullName').innerHTML = `${firstName} ${lastName}`;
+}
+
 function buildFullName() {
   var firstName = document.getElementById('firstName').value;
   var lastName = document.getElementById('surname').value;
@@ -120,7 +124,7 @@ function buildFullName() {
       return;
   }
 
-  document.getElementById('fullName').innerHTML = `${firstName} ${lastName}`;
+  setName(firstName, lastName);
 }</pre>
                 </div>
                 <p id="fullName" class="bg-white"></p>
