--- a/task3.html
+++ b/task3.html
@@ -34,6 +34,9 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="task3.html">Task3</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="task4.html">Task4</a>
+            </li>
           </ul>
         </div>
 
