--- a/task1.html
+++ b/task1.html
@@ -73,7 +73,7 @@ function getSentence() {
                 <p>
                   <button type="button" class="btn btn-secondary text-warning" onclick="getSentence()">Press Me</button>
                 </p>
-                <p id="sentence" class="bg-white"></p>
+                <p id="sentence" class="text-danger fs-4"></p>
             </div>
         </div>
       </main>
