--- a/task3.html
+++ b/task3.html
@@ -109,6 +109,9 @@
   })()
   </script>
   </div>
+  <div class="col-sm-6 text-center">
+    <p id="fullName" class="text-danger pt-4 fs-4"></p>
+  </div>
 </div>
 <!-- end -->
 
@@ -129,7 +132,6 @@ function getName() {
   document.getElementById('fullName').innerHTML = fullName;
 }</pre>
                 </div>
-                <p id="fullName" class="bg-white"></p>
             </div>
         </div>
       </main>
