--- a/task4.html
+++ b/task4.html
@@ -110,6 +110,9 @@
   })()
   </script>
   </div>
+  <div class="col-sm-6 text-center">
+    <p id="dressSense" class="text-danger pt-4 fs-4"></p>
+  </div>
 </div>
 <!-- end -->
 
@@ -129,7 +132,6 @@ function coatCheck() {
   document.getElementById('dressSense').innerHTML = dressAdvice;
 }</pre>
                 </div>
-                <p id="dressSense" class="bg-white"></p>
             </div>
         </div>
       </main>
