Completed Task5 complex dressage

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body class="bg-light">
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-secondary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
       <div class="container-fluid">
         <a class="navbar-brand text-warning" href="/">
           <img src="/img/greywidget.jpg" alt="the author and his cat" width="48" height="48" class="d-inline-block align-top">
@@ -37,10 +37,11 @@
             <li class="nav-item">
               <a class="nav-link" href="task4.html">Task4</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="task5.html">Task5</a>
+            </li>
           </ul>
         </div>
-
-
       </div>
     </nav>
 
@@ -50,12 +51,12 @@
       <main class="row justify-content-center pt-3 main-row">
         
         <div class="row justify-content-between pb-3">
-            <div class="col-2">
-                <img src="/img/the_human.png" alt="the author in silhouette" class="d-block w-100">
-            </div>
-            <div class="col-2">
-                <img src="/img/the_cat.png" alt="the author's cat in silhouette" class="d-block w-100">
-            </div>
+          <div class="col-2">
+              <img src="/img/the_human.png" alt="the author in silhouette" class="d-block w-100">
+          </div>
+          <div class="col-2">
+              <img src="/img/the_cat.png" alt="the author's cat in silhouette" class="d-block w-100">
+          </div>
         </div>
 
         <div class="row justify-content-center pt-3">
