--- a/task3.html
+++ b/task3.html
@@ -11,7 +11,7 @@
 
   <body class="bg-light">
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-secondary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
       <div class="container-fluid">
         <a class="navbar-brand text-warning" href="/">
           <img src="/img/greywidget.jpg" alt="the author and his cat" width="48" height="48" class="d-inline-block align-top">
@@ -36,6 +36,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="task4.html">Task4</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="task5.html">Task5</a>
             </li>
           </ul>
         </div>
