--- a/task1.html
+++ b/task1.html
@@ -40,6 +40,9 @@
             <li class="nav-item">
               <a class="nav-link" href="task5.html">Task5</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="task6.html">Task6</a>
+            </li>
           </ul>
         </div>
 
