Just the play stuff from week 11

--- a/play.html
+++ b/play.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="scripts/sentence.js"></script>
+        <script src="js/play2.js"></script>
     </head>
     <body>
-        <h1>Javascript functions and Control Flow</h1>
+        <h1>Javascript functions and Control Flow - Practical</h1>
     </body>
 </html>
